spelling and links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ feature_row:
   - image_path: /assets/images/flock_1.gif
     alt: "placeholder image 2"
     title: "Counting people"
-    excerpt: "Covid19 people tracking fears"
+    excerpt: "COVID-19 people tracking fears"
     url: /counting-people
     btn_label: "Read More"
     btn_class: "btn--inverse"
